More work on Backbone.sync and testsuite.

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -2,9 +2,17 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen"/>
-    <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+
+    <link rel="stylesheet" href="qunit.css" type="text/css" media="screen"/>
+
+    <script src="../lib/json2.js">
+    </script>
+
+    <script src="../lib/jquery.js">
+    </script>
+
+    <script src="../lib/qunit.js">
+    </script>
 
     <script src="../lib/underscore.js">
     </script>
@@ -12,13 +20,10 @@
     <script src="../lib/backbone.js">
     </script>
 
-    <script src="../lawnchair/lib/lawnchair.js">
+    <script src="../lib/lawnchair.js">
     </script>
 
-    <script src="../lawnchair/lib/lawnchair-adapter-indexed-db.js">
-    </script>
-
-    <script src="../lawnchair/lib/lawnchair-adapter-webkit-sqlite.js">
+    <script src="../lib/lawnchair-adapter-ie-userdata.js">
     </script>
 
     <script src="../backbone.lawnchair.js">
